--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>org.smart4j</groupId>
     <artifactId>smart-framework</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
+
+    <!--&lt;!&ndash; 公司jar 包上传配置&ndash;&gt;-->
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>thirdparty</id>-->
+            <!--<url>http://maven.joyomm.com/nexus/content/repositories/thirdparty</url>-->
+        <!--</repository>-->
+    <!--</distributionManagement>-->
 
     <dependencies>
         <!-- Servlet -->
@@ -82,4 +91,29 @@
             <version>2.0.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- compiler插件, 设定JDK版本 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
+
+
 </project>
